--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <header>
 
         </header>
-        <body>
+        <main>
             
-        </body>
+        </main>
         <footer>
             
         </footer>
