--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             
         </main>
         <footer class="page-footer pt-4" style="background-color: #9b9b9b; color: white;">
+            
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a href="#"> MySpaceWeb.com</a>
+                <a href="#" style="color: white; font-style: unset;"> MySpaceWeb.com</a>
             </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
