--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h5 class="mb-1">Registrate es gratis</h5>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#!" class="btn btn-outline-light">¡Regístrate!</a>
+                    <a href="#" class="btn btn-outline-light">¡Regístrate!</a>
                   </li>
                 </ul>
             </div>
