Colocar Galeria en el sitio web

--- a/index.html
+++ b/index.html
@@ -10,8 +10,46 @@
         <header>
 
         </header>
-        <main>
-            
+        <main class="container">
+            <br>
+            <h1 class="text-center">Galería</h1>
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="img/01.jpg" alt="Card image cap">
+                    <div class="card-body">
+                    <h5 class="card-title">Deliciosos platillos</h5>
+                    <p class="card-text">El placer de los banquetes debe medirse no por la abundancia de los manjares, sino por la reunión de los amigos y por su conversación.</p>
+                    </div>
+                    <div class="card-footer">
+                    <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                    <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/02.jpg" alt="Card image cap">
+                    <div class="card-body">
+                    <h5 class="card-title">Deliciosos platillos</h5>
+                    <p class="card-text">Una receta no tiene alma. Es el cocinero quien debe darle alma a la receta.</p>
+                    <p class="card-text">Una comida bien equilibrada es como un poema al desarrollo de la vida.</p>
+                    </div>
+                    <div class="card-footer">
+                    <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                    <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/11.jpg" alt="Card image cap">
+                    <div class="card-body">
+                    <h5 class="card-title">Deliciosos platillos</h5>
+                    <p class="card-text">Una comida bien preparada tienes sabores delicados que hay que retener en la boca para apreciarlos.</p>
+                    </div>
+                    <div class="card-footer">
+                    <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                    <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div> 
+            <br>           
         </main>
         <footer class="page-footer pt-4" style="background-color: #9b9b9b; color: white;">
             
